# CRSP

./: CMakeLists.txt  CRSP_build_instructions.md  CRSP_build_instructions.txt  LICENSE  README.md
include/: main.h
include/core/: fetch.h  memory_interface.h  opcode_decode.h  registers.h  rsp_core.h
include/crsp/: export.h  main.h  rsp_core.h
include/decode/: decoder.h
include/execute/: scalar_arith.h  scalar_branch.h  scalar_memory.h  scalar_opcodes.h  special.h  vector_opcodes.h
include/instructions/: execute.h
include/instructions/scalar/: ADDI.h  ADDIU.h
include/memory/: imem.h
include/state/: rsp_state.h
include/timing/: cycle_counter.h
src/: main.cpp
src/core/: fetch.cpp  memory_interface.cpp  opcode_decode.cpp  registers.cpp  rsp_core.cpp
src/decode/: decoder.cpp
src/execute/: execute_unit.cpp  scalar_arith.cpp  scalar_branch.cpp  scalar_memory.cpp  scalar_opcodes.cpp  special.cpp  vector_opcodes.cpp
src/instructions/: execute.cpp
src/instructions/scalar/: ADDI.cpp
src/memory/: imem.cpp
src/state/: rsp_state.cpp
src/timing/: cycle_counter.cpp
